Working on adding database to projectttt

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,8 @@
+<h2>Test Title</h2>
+<h2> Test Blog Post</h2>
 
-    <h2>Hello World</h2>
-    <p>Welcome to The Tech Blog</p>
-    <p>I'm writing this as a test</p>
+{{#each blogs as |post|}}
+
+{{post.title}}
+
+{{/each}}
