--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,6 @@
 {{{ body }}}
 </body>
 <footer class="navbar navbar-expand-lg bg-dark border-bottom border-bottom-dark fixed-bottom" data-bs-theme="dark">
-Created by Chase Chambers
+<p>Created by Chase Chambers</p>
 </footer>
 </html>
