--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,21 +10,23 @@
 <header>
    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-bottom-dark fixed-top" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">The Tech Blog</a>
+    <a class="navbar-brand" href="/">The Tech Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#">Dashboard</a>
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="/dashboard">Dashboard</a>
+        <a class="nav-link" href="/login">Login</a>
       </div>
     </div>
   </div>
 </nav>
 </header>
 <body>
+
 {{{ body }}}
+
 </body>
 <footer class="navbar navbar-expand-lg bg-dark border-bottom border-bottom-dark fixed-bottom" data-bs-theme="dark">
 <p>Created by Chase Chambers</p>
