--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,11 @@
 </header>
 <body>
 
-{{{ body }}}
+<div class= "container">
+
+  {{{ body }}}
+
+</div>
 
 </body>
 <footer class="navbar navbar-expand-lg bg-dark border-bottom border-bottom-dark fixed-bottom" data-bs-theme="dark">
