--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,24 @@
-header {
-    margin-bottom: 60px;
-    color: wheat;
+header, .project:not(:last-child) {
+  border-bottom: 1px solid #ccc;
 }
 
-body {
-    background: wheat;
-    }
+.no-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #1b89bc;
+  text-decoration: none;
+  font-size: 100%;
+}
 
+.no-button:hover {
+  color: #065b83;
+  text-decoration: underline;
+}
 
-footer {
-    padding-left: 20px;
-    color: wheat;
-
-    }
+.dollar-amount {
+  color: #056605;
+  font-weight: bold;
+  margin-left: -5px;
+}
