--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,7 +8,7 @@
   <div class="col-md-6">
     <h3>Create a New Post:</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-blog-form">
       <div class="form-group">
         <label for="blog-name">post name:</label>
         <input class="form-input" type="text" id="blog-name" name="blog-name" />
