--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/blogs/{{blog.id}}">{{blog.name}}</a>
+      <a href="/blog/{{blog.id}}">{{blog.name}}</a>
     </h2>
     <p>
       <span for="img" aria-label="money">💲</span>
