--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -11,13 +11,11 @@
     <h3>Leave a comment:</h3>
 
     <form class="form new-comment-form">
-      <div class="form-group">
-        <label for="comment-name">comment name:</label>
-        <input class="form-input" type="text" id="blog-name" name="comment-name" />
-      </div>
+      <input type="hidden" value="{{user_id}}" name="user_id" id="user_id">
+      <input type="hidden" value="{{blog_id}}" name="blog_id" id="blog_id">
       <div class="form-group">
         <label for="comment-desc">comment:</label>
-        <textarea class="form-input" id="blog-desc" name="comment-desc"></textarea>
+        <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -33,7 +31,7 @@
     {{#each comments as |comment|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
+        <h4><a href="/blog/{{id}}">{{blog.title}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
@@ -48,4 +46,5 @@
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+
+<script src="/js/comment.js"></script>
