--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -31,7 +31,7 @@
     {{#each comments as |comment|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/blog/{{id}}">{{blog.title}}</a></h4>
+        <h4><a href="/comment/{{id}}">{{blog.title}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
