Testing with askbcs

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -12,7 +12,7 @@
 
     <form class="form new-comment-form">
       <input type="hidden" value="{{user_id}}" name="user_id" id="user_id">
-      <input type="hidden" value="{{blog_id}}" name="blog_id" id="blog_id">
+      <input type="hidden" value="{{id}}" name="blog_id" id="blog_id">
       <div class="form-group">
         <label for="comment-desc">comment:</label>
         <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
