--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -24,12 +24,11 @@
   </div>
 
   <h3>Current Comments:</h3>
-  {{#if comments.length}}
+
   <div class="col-md-6 blog-list">
   
-
-    {{#each comments as |comment|}}
-    <div class="row mb-2">
+    {{#each comments}}
+    {{!-- <div class="row mb-2">
       <div class="col-md-8">
         <h4><a href="/comment/{{id}}">{{blog.title}}</a></h4>
       </div>
@@ -37,13 +36,14 @@
         <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
       </div>
     </div>
-    {{/each}}
-  </div>
+   
+  </div> --}}
 
-  {{else}}
+  <P>{{comments.name}}</P>
 
-  <p>No comments</p>
-  {{/if}}
+
+   {{/each}}
+
 </div>
 
 
