--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -4,10 +4,11 @@
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
   
-</div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
+
+<div>
+  <div>
+  {{#if logged_in}}
     <h3>Leave a comment:</h3>
 
     <form class="form new-comment-form">
@@ -21,11 +22,13 @@
         <button type="submit" class="btn btn-primary">Create</button>
       </div>
     </form>
-  </div>
+    {{ else }}
+    <p> Log in to leave a comment!</p>
 
+{{/if}}
   <h3>Current Comments:</h3>
 
-  <div class="col-md-6 blog-list">
+  <div>
   
     {{#each comments}}
     {{!-- <div class="row mb-2">
@@ -39,12 +42,23 @@
    
   </div> --}}
 
-  <P>{{comments.name}}</P>
+  <P>{{comment}}</p> 
+   <p>created on {{format_date date_created}}</p>
+   {{#each blog}}
+
+    <p>by {{name}}</P>
+
+{{/each}}
+    {{/each}}
 
 
-   {{/each}}
+
+
+
+  
 
 </div>
-
+</div>
+</div>
 
 <script src="/js/comment.js"></script>
