--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -7,58 +7,38 @@
 
 
 <div>
-  <div>
-  {{#if logged_in}}
-    <h3>Leave a comment:</h3>
+    <div>
+    {{#if logged_in}}
+      <h3>Leave a comment:</h3>
 
-    <form class="form new-comment-form">
-      <input type="hidden" value="{{user_id}}" name="user_id" id="user_id">
-      <input type="hidden" value="{{id}}" name="blog_id" id="blog_id">
-      <div class="form-group">
-        <label for="comment-desc">comment:</label>
-        <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-    {{ else }}
-    <p> Log in to leave a comment!</p>
+      <form class="form new-comment-form">
+        <input type="hidden" value="{{user_id}}" name="user_id" id="user_id">
+        <input type="hidden" value="{{id}}" name="blog_id" id="blog_id">
+        <div class="form-group">
+          <label for="comment-desc">comment:</label>
+          <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Create</button>
+        </div>
+      </form>
+      {{ else }}
+      <p> Log in to leave a comment!</p>
 
-{{/if}}
-  <h3>Current Comments:</h3>
+    {{/if}}
+    <h3>Current Comments:</h3>
 
-  <div>
-  
-    {{#each comments}}
-    {{!-- <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/comment/{{id}}">{{blog.title}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
-      </div>
+    <div>
+      {{#each comments}}
+
+          <P>{{comment}}</p> 
+          <p>created on {{format_date date_created}}</p>
+          <p>by {{user_id}}</P>
+
+      {{/each}}
+
     </div>
-   
-  </div> --}}
-
-  <P>{{comment}}</p> 
-   <p>created on {{format_date date_created}}</p>
-   {{#each blog}}
-
-    <p>by {{name}}</P>
-
-{{/each}}
-    {{/each}}
-
-
-
-
-
-  
-
-</div>
-</div>
+  </div>
 </div>
 
 <script src="/js/comment.js"></script>
