Everything working so far...

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,5 +12,9 @@
       Created by {{user.name}} on {{format_date date_created}}
     </p>
   </div>
+
+  {{ else }}
+
+  <p>No current blog posts</p>
 </div>
 {{/each}}
