--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -33,7 +33,7 @@
 
           <P>{{comment}}</p> 
           <p>created on {{format_date date_created}}</p>
-          <p>by {{user_id}}</P>
+          <p>by {{user.name}}</P>
 
       {{/each}}
 
